--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Basic Setup</title>
-    <link rel="stylesheet" href=".css/index.css" />
+    <title>Star Wars Canon</title>
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
-    <h1>Hello, World!</h1>
-    <script src=".js/index.js"></script>
+    <section id="people-section">
+      <h1>Star Wars People</h1>
+      <div id="one-person-container">
+        <h2 id="one-person-header"></h2>
+        <ul id="person-details"></ul>
+        <button id="done-button">Done</button>
+      </div>
+      <div id="people-container"></div>
+    </section>
+    <script src="./js/index.js"></script>
   </body>
 </html>
